classDiagram
    class LogDetailsResponse {
        +String id
        +String timestamp
        +String message
        +String severity
        +String organizationId
        +Map<String, Object> details
    }
    class LogResponse {
        +String id
        +String timestamp
        +String message
        +String severity
        +String organizationId
    }
    class LogsResponse {
        +List<LogResponse> logs
        +int totalCount
        +PaginationCriteria pagination
    }
    class LogFilterCriteria {
        +String dateRange
        +String severity
        +String organizationId
        +PaginationCriteria pagination
    }
    class LogFilterResponse {
        +List<String> severities
        +List<OrganizationFilterResponse> organizations
        +List<String> dateRanges
    }
    class OrganizationFilterResponse {
        +String id
        +String name
    }
    LogsResponse --> LogResponse
    LogResponse --> LogDetailsResponse
    LogFilterResponse --> OrganizationFilterResponse
    LogsResponse --> PaginationCriteria
    LogFilterCriteria --> PaginationCriteria